[project]
name = "tx-monitor"
version = "0.1.0"
description = "Beam mem-pool transaction snapshot monitor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"ecdsa>=0.19",
	"cryptography>=41.0",
	"pytest-cov>=7.1.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
